<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="funhouse_summary_title">Customize your device</string>
    <string name="system_category">System</string>
    <string name="qs_category">QuickSettings</string>
    <string name="lockscreen_category">LockScreen</string>
    <string name="statusbar_category">StatusBar</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="global_actions_title">Power menu</string>
    <string name="global_actions_summary">Add buttons to the power menu</string>
    <string name="global_actions_power">Power</string>
    <string name="global_actions_restart">Restart</string>
    <string name="global_actions_airplane">Airplane</string>
    <string name="global_actions_settings">Settings</string>
    <string name="global_actions_lockdown">Lock down</string>
    <string name="global_actions_soundpanel">Sound panel</string>
    <string name="global_actions_users">Users</string>
    <string name="global_actions_screenshot">Screenshot</string>
    <string name="global_actions_screenrecord">Screenrecord</string>
    <string name="global_actions_flashlight">Flashlight</string>
    <string name="global_actions_advanced_reboot_title">Advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show recovery and bootloader restart options</string>
    <string name="seekbar_no_default_value">No default value set</string>
    <string name="seekbar_default_value_set">Value set to default of <xliff:g id="number">%d</xliff:g></string>
    <string name="seekbar_default_value_already_set">Default value is already set</string>
    <string name="seekbar_default_string">Default</string>
    <string name="audio_panel_view">Audio panel</string>
    <string name="audio_panel_view_media_title">Media</string>
    <string name="audio_panel_view_ringer_title">Ring</string>
    <string name="audio_panel_view_notification_title">Notification</string>
    <string name="audio_panel_view_alarm_title">Alarm</string>
    <string name="audio_panel_view_voice_title">Voice</string>
    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
    <string name="leds_title">LED Lights</string>
    <string name="battery_light_title">Battery Light</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="statusbar_logo_title">Statusbar logo</string>
    <string name="logo_style_category_title">Logo options</string>
    <string name="status_bar_logo_title">Validus logo</string>
    <string name="status_bar_logo_summary">Enable to show Validus logo on statusbar</string>
    <string name="status_bar_logo_style_title">Validus logo style</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="screen_off_animation_default">Default</string>
    <string name="screen_off_animation_crt">CRT</string>
    <string name="screen_off_animation_scale">Scale</string>
    <string name="network_traffic_category">Network traffic</string>
    <string name="network_traffic_title">Statusbar network activity</string>
    <string name="network_traffic_summary">Show network activity in the normal status bar</string>
    <string name="network_traffic_expanded_status_bar_title">Expanded statusbar network activity</string>
    <string name="network_traffic_expanded_status_bar_summary">Show network activity in the status bar above quick settings</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold</string>
    <string name="network_traffic_autohide_threshold_kbs">kB/s</string>
    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep on statusbar</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
    <string name="lockscreen_media_blur">Media artwork blur</string>
    <string name="lockscreen_media_blur_title">Media artwork blur level</string>
    <string name="lockscreen_media_blur_summary">Control the blur amount of media artwork</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
    <string name="buttons_title">Hardware keys</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_volume_keys_title">Volume rocker</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="statusbar_clock_title">Clock &amp; Date</string>
    <string name="quick_pulldown_title">Status bar pulls down Quick Settings</string>
    <string name="statusbar_battery_title">Statusbar battery</string>
    <string name="navbar_title">Navigation bar</string>
    <string name="navbar_invert_layout_title">Invert layout</string>
    <string name="qs_show_brightness_title">Brightness slider</string>
    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show an auto brightness control button near the slider</string>
    <string name="qs_show_minmax_brightness_title">Min-Max icons</string>
    <string name="qs_show_minmax_brightness_summary">Show + - brightness control buttons near the slider</string>
    <string name="button_title">Volume keys</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="navbar_tuner_title">Navbar layout</string>
    <string name="tuner_status_bar_bg_transparency">Transparent status bar background</string>
    <string name="qs_status_bar_transparency">Activate to set to transparent</string>
    <string name="footer_text_title">QS Footer text</string>
    <string name="validus_footer_text_show_title">Show QS footer text</string>
    <string name="validus_footer_text_string_title">Customize footer text</string>
    <string name="validus_footer_text_string_summary">Set to empty for default #Validus</string>
    <string name="custom_back_lights_title">Button backlights</string>
    <string name="button_lights_title">Button backlights</string>
    <string name="button_backlight_title">Enable backlights</string>
    <string name="button_backlight_summary">Turn backlights on or off</string>
    <string name="button_backlight_timeout_title">Set timeout on backlights</string>
    <string name="button_backlight_on_touch_only_title">On touch</string>
    <string name="button_backlight_on_touch_only_summary">Backlights only function on button touch</string>
    <string name="custom_button_lights_title">Match screen brightness</string>
    <string name="custom_button_lights_summary">Activate to adopt screen brightness level</string>
    <string name="custom_button_brightness_title">Set brightness manually</string>
    <string name="qspanel_title">QS panel</string>
    <string name="qs_panel_alpha_summary">Configure opacity of background</string>
    <string name="statusbar_header_title">Statusbar header</string>
    <string name="qs_themes_category_title">QS Themes</string>
    <string name="qs_panel_color_title">QS Panel color</string>
    <string name="qs_bg_wall_title">Use Wallpaper colors</string>
    <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
    <string name="qs_bg_use_fw">Use default colors</string>
    <string name="qs_bg_use_fw_summary">Disable custom QS styles for external theme engines</string>
    <string name="qs_bg_accent_title">Use Accent color</string>
    <string name="qs_bg_accent_summary">Set QS background color from System Accent</string>
    <string name="clock_title">Lockscreen clock</string>
    <string name="lockscreen_clock_title">Clock style</string>
    <string name="lockscreen_clock_dialog_title">Select clock style</string>
    <string name="lockscreen_date_selection_title">Date style</string>
    <string name="lockscreen_date_dialog_title">Select date style</string>
    <string name="pulse_ambient_light_title">Show on new notifcation</string>
    <string name="pulse_ambient_light_summary">Show light pulse on new notification</string>
    <string name="ambient_notification_light_enabled_title">Show on always on</string>
    <string name="ambient_notification_light_enabled_summary">Show light pulse on new notification pulse always on</string>
    <string name="pulse_ambient_light_note">Wake screen on receiving new notifications must be turned on</string>
    <string name="pulse_ambient_category_title">Notification pulse</string>
    <string name="ambient_notification_light_hide_aod_title">Only show light pulse</string>
    <string name="ambient_notification_light_hide_aod_summary">Hide all other display elements from always on</string>
    <string name="ambient_notification_light_accent_title">Use system accent color</string>
    <string name="ambient_notification_light_accent_summary">Use current system accent color for light pulse</string>
    <string name="ambient_notification_light_color_title">Use custom color</string>
    <string name="ambient_notification_light_color_summary">Use a custom color for light pulse</string>
</resources>