<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Ground Zero Roms

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.gzr.funhouse.preference.SystemSettingListPreference
        android:key="status_bar_quick_qs_pulldown" 
        android:title="@string/quick_pulldown_title" 
        android:entries="@array/quick_pulldown_entries" 
        android:entryValues="@array/quick_pulldown_values"
        android:defaultValue="0" />

    <Preference
        android:key="footer_text"
        android:fragment="com.gzr.funhouse.fragments.FooterText"
        android:title="@string/footer_text_title" />

    <Preference
        android:key="qspanel"
        android:fragment="com.gzr.funhouse.fragments.QSPanel"
        android:title="@string/qspanel_title" />

    <Preference
        android:key="statusbar_header"
        android:fragment="com.gzr.funhouse.fragments.StatusBarHeader"
        android:title="@string/statusbar_header_title" />

    <com.gzr.funhouse.preference.SecureSettingSwitchPreference
        android:key="qs_status_bar_bg_transparency"
        android:title="@string/tuner_status_bar_bg_transparency"
        android:summary="@string/qs_status_bar_transparency"
        android:defaultValue="false" />

    <com.gzr.funhouse.preference.SecureSettingSwitchPreference
        android:key="qs_show_brightness"
        android:title="@string/qs_show_brightness_title"
        android:summary="@string/qs_show_brightness_summary"
        android:defaultValue="true" />

    <com.gzr.funhouse.preference.SecureSettingSwitchPreference
        android:key="qs_brightness_position_bottom"
        android:title="@string/qs_brightness_position_bottom_title"
        android:summary="@string/qs_brightness_position_bottom_summary"
        android:defaultValue="false"
        android:dependency="qs_show_brightness" />

    <com.gzr.funhouse.preference.SecureSettingSwitchPreference
        android:key="qs_show_auto_brightness"
        android:title="@string/qs_show_auto_brightness_title"
        android:summary="@string/qs_show_auto_brightness_summary"
        android:defaultValue="true"
        android:dependency="qs_show_brightness" />

    <com.gzr.funhouse.preference.SecureSettingSwitchPreference
        android:key="qs_show_minmax_brightness"
        android:title="@string/qs_show_minmax_brightness_title"
        android:summary="@string/qs_show_minmax_brightness_summary"
        android:defaultValue="false"
        android:dependency="qs_show_brightness" />

</PreferenceScreen>
