<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2018 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/pulse_ambient_category_title"
    android:key="lockscreen_pulse">

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="pulse_ambient_light"
        android:title="@string/pulse_ambient_light_title"
        android:summary="@string/pulse_ambient_light_summary"
        android:defaultValue="false" />
	
    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="ambient_notification_light_enabled"
        android:title="@string/ambient_notification_light_enabled_title"
        android:summary="@string/ambient_notification_light_enabled_summary"
        android:defaultValue="false" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="ambient_notification_light_hide_aod"
        android:title="@string/ambient_notification_light_hide_aod_title"
        android:summary="@string/ambient_notification_light_hide_aod_summary"
        android:defaultValue="false"
        android:dependency="ambient_notification_light_enabled" />
	    
    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="ambient_notification_light_accent"
        android:title="@string/ambient_notification_light_accent_title"
        android:summary="@string/ambient_notification_light_accent_summary"
        android:defaultValue="false"
        android:disableDependentsState="true" />
	
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="ambient_notification_light_color"
        android:title="@string/ambient_notification_light_color_title"
        android:summary="@string/ambient_notification_light_color_summary"
        android:persistent="false"
        android:dependency="ambient_notification_light_accent" />

    <Preference
        android:icon="@drawable/ic_info_outline_24dp"
        android:persistent="false"
        android:summary="@string/pulse_ambient_light_note" />
	
</PreferenceScreen>

