<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/network_traffic_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="button_lights_category"
        android:title="@string/button_lights_title" >

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="button_backlight_enable"
        android:title="@string/button_backlight_title"
        android:summary="@string/button_backlight_summary"
        android:defaultValue="true" />

    <com.gzr.funhouse.preference.CustomSeekBarPreference
        android:key="button_backlight_timeout"
        android:title="@string/button_backlight_timeout_title"
        android:max="100"
        settings:min="0"
        settings:units=""
        android:defaultValue="1" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="button_backlight_on_touch_only"
        android:title="@string/button_backlight_on_touch_only_title"
        android:summary="@string/button_backlight_on_touch_only_summary"
        android:defaultValue="false" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="custom_button_use_screen_brightness"
        android:title="@string/custom_button_lights_title"
        android:summary="@string/custom_button_lights_summary"
        android:defaultValue="false" />

    <com.gzr.funhouse.preference.CustomSeekBarPreference
        android:key="custom_button_brightness"
        android:title="@string/custom_button_brightness_title"
        android:max="250"
        settings:min="0"
        settings:units=""
        android:defaultValue="1" />

    </PreferenceCategory>

</PreferenceScreen>
