<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2019 Validus
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/qspanel_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.gzr.funhouse.preference.SystemSettingSeekBarPreference
        android:key="qs_panel_alpha"
        android:title="@string/qs_themes_category_title"
        android:summary="@string/qs_panel_alpha_summary"
        android:max="100"
        settings:min="0"
        android:defaultValue="100"
        settings:units="%"
        android:persistent="false" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="qs_panel_bg_use_fw"
        android:title="@string/qs_bg_use_fw"
        android:summary="@string/qs_bg_use_fw_summary"
        android:defaultValue="true"
        android:disableDependentsState="true" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="qs_panel_bg_use_wall"
        android:title="@string/qs_bg_wall_title"
        android:summary="@string/qs_bg_wall_summary"
        android:defaultValue="false"
        android:dependency="qs_panel_bg_use_fw" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="qs_panel_bg_use_accent"
        android:title="@string/qs_bg_accent_title"
        android:summary="@string/qs_bg_accent_summary"
        android:defaultValue="false"
        android:dependency="qs_panel_bg_use_fw" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="qs_panel_color"
        android:title="@string/qs_panel_color_title"
        android:defaultValue="0xffffff"
        android:persistent="false"
        android:dependency="qs_panel_bg_use_fw" />

</PreferenceScreen>
