<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="statusbar_clock_date"
        android:fragment="com.gzr.funhouse.fragments.ClockOptions"
        android:title="@string/statusbar_clock_title" />

    <Preference
        android:key="statusbar_battery"
        android:fragment="com.gzr.funhouse.fragments.StatusBarBattery"
        android:title="@string/statusbar_battery_title" />

    <Preference
        android:key="statusbar_logo"
        android:fragment="com.gzr.funhouse.fragments.StatusBarLogoSettings"
        android:title="@string/statusbar_logo_title" />
       
    <Preference
        android:key="network_traffic_state"
        android:title="@string/network_traffic_title"
        android:fragment="com.gzr.funhouse.fragments.NetworkTraffic" />

    <Preference
            android:title="@string/statusbar_items_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
    </Preference>

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_sleep_gesture_title"
        android:defaultValue="true" />

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
        android:key="three_finger_gesture"
        android:title="@string/three_finger_gesture"
        android:summary="@string/three_finger_gesture_summary"
        android:defaultValue="false" />

</PreferenceScreen>
