<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/footer_text_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.gzr.funhouse.preference.SystemSettingSwitchPreference
            android:key="validus_footer_text_show"
            android:title="@string/validus_footer_text_show_title"
            android:defaultValue="false" />

    <com.gzr.funhouse.preference.SystemSettingEditTextPreference
            android:key="validus_footer_text_string"
            android:title="@string/validus_footer_text_string_title"
            android:summary="@string/validus_footer_text_string_summary"
            android:dependency="validus_footer_text_show"
            android:defaultValue="#Validus" />

</PreferenceScreen>
