<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="buttons"
        android:fragment="com.gzr.funhouse.hwkeys.fragments.Buttons"
        android:title="@string/buttons_title" />

    <Preference
        android:key="nav_bar"
        android:fragment="com.gzr.funhouse.fragments.NavigationBar"
        android:title="@string/navbar_title" />

    <Preference
        android:key="button"
        android:fragment="com.gzr.funhouse.fragments.Button"
        android:title="@string/button_title" />

    <Preference
        android:key="custom_back_lights"
        android:fragment="com.gzr.funhouse.fragments.ButtonBacklights"
        android:title="@string/custom_back_lights_title" />

</PreferenceScreen>
