<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2019 Validus
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/navbar_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
            android:title="@string/navbar_tuner_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.NavBarActivity" />
    </Preference>

    <SwitchPreference
        android:key="enable_nav_bar"
        android:title="@string/enable_navbar_title"
        android:defaultValue="true"
        android:persistent="false" />

    <com.gzr.funhouse.preference.SecureSettingSwitchPreference
            android:key="sysui_nav_bar_inverse"
            android:title="@string/navbar_invert_layout_title"
            android:defaultValue="false" />

</PreferenceScreen>
